testdata/baselines/reference/compiler/tluaColonCallGenerics.errors.txt
tluaColonCallGenerics.tlua(10,7): error TS2322: Type 'number' is not assignable to type 'string'.
tluaColonCallGenerics.tlua(18,31): error TS2345: Argument of type 'number' is not assignable to parameter of type 'string'.


==== tluaColonCallGenerics.tlua (2 errors) ====
    // The receiver participates in inference like any other argument.
    interface Boxer {
      wrap<T>(self: Boxer, value: T): { value: T };
      same<S>(self: S): S;
    }
    declare boxer: Boxer;
    
    local wrapped = boxer:wrap(1);
    local n: number = wrapped.value;
    local s: string = wrapped.value;
          ~
!!! error TS2322: Type 'number' is not assignable to type 'string'.
    
    // A self-generic member infers the receiver's own type.
    local again = boxer:same();
    local w2 = again:wrap("s");
    
    // Explicit type arguments still slot after the name.
    local w3 = boxer:wrap<string>("x");
    local w4 = boxer:wrap<string>(1);
                                  ~
!!! error TS2345: Argument of type 'number' is not assignable to parameter of type 'string'.
    
    // A parenthesized colon call is not an arrow parameter list, with or without
    // explicit type arguments.
    local w5 = (boxer:wrap(1));
    local w6 = (boxer:wrap<string>("x"));
    local arrow = (b: Boxer) => b:wrap(1);
    type Wrapped<T> = { value: T };
    local arrowGeneric = (w: Wrapped<string>) => w.value;
    